# Process this file with autoconf to produce a configure script.
AC_INIT([advance],[binary])
AM_INIT_AUTOMAKE([advance], [binary])

# Checks for programs.
AC_PROG_INSTALL

# Checks for libraries.
# Checks for header files.
# Checks for typedefs, structures, and compiler characteristics.
# Checks for library functions.

AC_CONFIG_FILES([Makefile])
AC_OUTPUT

